Added optimizations,formatting changes,better error handling