@@ -7,33 +7,34 @@ import model.Volunteer;
 import java.util.*;
 
 public class GeneticOptimizer {
-    private final int maxGenerations = 100;
     private final int populationSize = 50;
-    private final double mutationRate = 0.1;
 
     private final Map<String, Integer> serviceCapacities;
 
-    public GeneticOptimizer(Map<String, Integer> serviceCapacities) {
+    public GeneticOptimizer(Map<String, Integer> serviceCapacities)
+    {
         this.serviceCapacities = serviceCapacities;
     }
 
-    public List<Assignment> optimize(Collection<Volunteer> volunteers) {
-        List<Map<Integer, String>> population = generateInitialPopulation(volunteers);
+    public List<Assignment> optimize(Collection<Volunteer> volunteers)
+    {
+        List<Map<Long, String>> population = generateInitialPopulation(volunteers);
 
-        for (int gen = 0; gen < maxGenerations; gen++) {
+        int maxGenerations = 100;
+        for(int gen = 0; gen < maxGenerations; gen++)
+        {
             population.sort(Comparator.comparingDouble(assignments -> computeTotalCost(assignments, volunteers)));
-
-            List<Map<Integer, String>> nextGen = new ArrayList<>();
 
             // Elitism: carry top 10% directly
             int eliteCount = (int) (populationSize * 0.1);
-            nextGen.addAll(population.subList(0, eliteCount));
+            List<Map<Long, String>> nextGen = new ArrayList<>(population.subList(0, eliteCount));
 
             // Crossover
-            while (nextGen.size() < populationSize) {
-                Map<Integer, String> parent1 = select(population, volunteers);
-                Map<Integer, String> parent2 = select(population, volunteers);
-                Map<Integer, String> child = crossover(parent1, parent2);
+            while(nextGen.size() < populationSize)
+            {
+                Map<Long, String> parent1 = select(population, volunteers);
+                Map<Long, String> parent2 = select(population, volunteers);
+                Map<Long, String> child = crossover(parent1, parent2);
                 mutate(child);
                 nextGen.add(child);
             }
@@ -42,37 +43,46 @@ public class GeneticOptimizer {
         }
 
         // Best solution after all generations
-        Map<Integer, String> best = population.get(0);
+        Map<Long, String> best = population.getFirst();
         return toAssignmentList(best, volunteers);
     }
 
     // Initial random valid solutions
-    private List<Map<Integer, String>> generateInitialPopulation(Collection<Volunteer> volunteers) {
-        List<Map<Integer, String>> population = new ArrayList<>();
+    private List<Map<Long, String>> generateInitialPopulation(Collection<Volunteer> volunteers)
+    {
+        List<Map<Long, String>> population = new ArrayList<>();
         List<String> services = new ArrayList<>(serviceCapacities.keySet());
 
-        for (int i = 0; i < populationSize; i++) {
-            Map<Integer, String> assignment = new HashMap<>();
+        for(int i = 0; i < populationSize; i++)
+        {
+            Map<Long, String> assignment = new HashMap<>();
             Map<String, Integer> serviceLoad = new HashMap<>();
-            for (Volunteer v : volunteers) {
+            for(Volunteer v : volunteers)
+            {
                 List<String> prefs = new ArrayList<>();
-                for (Preference p : v.getPreferences()) prefs.add(p.getServiceName());
+                for(Preference p : v.getPreferences())
+                    prefs.add(p.getServiceName());
                 Collections.shuffle(prefs); // random preference order
 
                 String chosen = null;
-                for (String s : prefs) {
+                for(String s : prefs)
+                {
                     int used = serviceLoad.getOrDefault(s, 0);
-                    if (used < serviceCapacities.getOrDefault(s, 5)) {
+                    if(used < serviceCapacities.getOrDefault(s, 5))
+                    {
                         chosen = s;
                         serviceLoad.put(s, used + 1);
                         break;
                     }
                 }
                 // fallback: random service
-                if (chosen == null) {
-                    for (String s : services) {
+                if(chosen == null)
+                {
+                    for(String s : services)
+                    {
                         int used = serviceLoad.getOrDefault(s, 0);
-                        if (used < serviceCapacities.get(s)) {
+                        if(used < serviceCapacities.get(s))
+                        {
                             chosen = s;
                             serviceLoad.put(s, used + 1);
                             break;
@@ -88,19 +98,24 @@ public class GeneticOptimizer {
         return population;
     }
 
-    private double computeTotalCost(Map<Integer, String> assignment, Collection<Volunteer> volunteers) {
+    private double computeTotalCost(Map<Long, String> assignment, Collection<Volunteer> volunteers)
+    {
         double total = 0;
-        for (Volunteer v : volunteers) {
+        for(Volunteer v : volunteers)
+        {
             String assigned = assignment.get(v.getId());
             total += calculateCost(v, assigned);
         }
         return total;
     }
 
-    private double calculateCost(Volunteer v, String service) {
+    private double calculateCost(Volunteer v, String service)
+    {
         List<Preference> prefs = v.getPreferences();
-        for (int i = 0; i < prefs.size(); i++) {
-            if (prefs.get(i).getServiceName().equals(service)) {
+        for(int i = 0; i < prefs.size(); i++)
+        {
+            if(prefs.get(i).getServiceName().equals(service))
+            {
                 return Math.pow(i, 2);
             }
         }
@@ -108,37 +123,45 @@ public class GeneticOptimizer {
         return 10 * Nd * Nd;
     }
 
-    private Map<Integer, String> crossover(Map<Integer, String> p1, Map<Integer, String> p2) {
-        Map<Integer, String> child = new HashMap<>();
-        for (Integer id : p1.keySet()) {
+    private Map<Long, String> crossover(Map<Long, String> p1, Map<Long, String> p2)
+    {
+        Map<Long, String> child = new HashMap<>();
+        for(Long id : p1.keySet())
+        {
             child.put(id, Math.random() < 0.5 ? p1.get(id) : p2.get(id));
         }
         return child;
     }
 
-    private void mutate(Map<Integer, String> assignment) {
-        if (Math.random() > mutationRate) return;
+    private void mutate(Map<Long, String> assignment)
+    {
+        double mutationRate = 0.1;
+        if(Math.random() > mutationRate)
+            return;
 
-        List<Integer> keys = new ArrayList<>(assignment.keySet());
+        List<Long> keys = new ArrayList<>(assignment.keySet());
         int index = new Random().nextInt(keys.size());
-        int volId = keys.get(index);
+        long volId = keys.get(index);
         List<String> serviceList = new ArrayList<>(serviceCapacities.keySet());
         String newService = serviceList.get(new Random().nextInt(serviceList.size()));
         assignment.put(volId, newService);
     }
 
-    private Map<Integer, String> select(List<Map<Integer, String>> population, Collection<Volunteer> volunteers) {
+    private Map<Long, String> select(List<Map<Long, String>> population, Collection<Volunteer> volunteers)
+    {
         // Tournament selection
         int i = new Random().nextInt(population.size());
         int j = new Random().nextInt(population.size());
-        double costI = computeTotalCost(population.get(i), population.get(0).keySet().stream().map(id -> volunteers.stream().filter(volunteer -> id == volunteer.getId()).findFirst().get()).toList()); 
-        double costJ = computeTotalCost(population.get(i), population.get(0).keySet().stream().map(id -> volunteers.stream().filter(volunteer -> id == volunteer.getId()).findFirst().get()).toList()); 
+        double costI = computeTotalCost(population.get(i), population.getFirst().keySet().stream().map(id -> volunteers.stream().filter(volunteer -> id == volunteer.getId()).findFirst().get()).toList());
+        double costJ = computeTotalCost(population.get(i), population.getFirst().keySet().stream().map(id -> volunteers.stream().filter(volunteer -> id == volunteer.getId()).findFirst().get()).toList());
         return costI < costJ ? population.get(i) : population.get(j);
     }
 
-    private List<Assignment> toAssignmentList(Map<Integer, String> map, Collection<Volunteer> volunteers) {
+    private List<Assignment> toAssignmentList(Map<Long, String> map, Collection<Volunteer> volunteers)
+    {
         List<Assignment> result = new ArrayList<>();
-        for (Volunteer v : volunteers) {
+        for(Volunteer v : volunteers)
+        {
             String s = map.get(v.getId());
             double cost = calculateCost(v, s);
             result.add(new Assignment(v.getId(), s, cost));
